# chess-accuracy

./: .gitignore  AGENTS.md  DOC.md  README.md  calculate_accuracy.py  calculate_accuracy_faithful.py  elo_results.csv  estimate_all.json  estimate_all.sh  estimate_elo.py  estimate_elo_separate.py  example1.pgn  example2.pgn  pyproject.toml
chess_accuracy/: __init__.py  batch_inference.py  common.py  divider.py  pgn_parser.py
chess_accuracy/maia3/: __init__.py  model_registry.py  models.py
chess_accuracy/maia3/onnx/: .gitignore
scripts/: export_onnx.py  test_batch_inference.py
