[project]
name = "chess-accuracy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "chess>=1.10.0",
    "huggingface-hub>=1.24.0",
    "lczerolens[hf]>=0.4.0",
    "numpy>=2.0.2",
    "onnx>=1.22.0",
    "onnxruntime>=1.24.3",
    "onnxscript>=0.7.1",
    "scipy>=1.13.1",
    "torch>=2.13.0",
    "tqdm",
]

[project.optional-dependencies]
gui = ["dearpygui>=1.11.1"]
build = ["pyinstaller>=6.10.0"]
